atualizando arquivos e caminhos

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
         <meta name="twitter:description" content="">
         <meta name="twitter:image" content="http://www.example.com/path/to/image.jpg">
 
-        <link rel="stylesheet" href="assets/stylesheets/vendor/normalize.css">
+        <link rel="stylesheet" href="assets/stylesheets/vendor/normalize.min.css">
         <link rel="stylesheet" href="assets/stylesheets/main.css?=v1">
         <script src="assets/javascripts/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browsehappy">Você está usando um navegador <strong>desatualizado</strong>. <a href="http://browsehappy.com/">Atualize seu navegador</a> para melhorar sua experiência.</p>
         <![endif]-->
 
         <!-- Add your site or application content here -->
