--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory http://mathiasbynens.be/notes/touch-icons -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
-        <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
-        <link rel="apple-touch-icon-precomposed" href="assets/images/apple-touch-icon-precomposed.png">
+        <link rel="shortcut icon" href="assets/images/icon/favicon.ico">
+        <link rel="apple-touch-icon" href="assets/images/icon/apple-touch-icon.png">
+        <link rel="apple-touch-icon-precomposed" href="assets/images/icon/apple-touch-icon-precomposed.png">
         <link rel="author" href="humans.txt" />
 
         <!-- Facebook -->
